--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RSVP - [Your Names]' Wedding</title>
+    <title> RSVP - Wedding</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>[Your Names]' Wedding</h1>
-        <h2>The Big Day - [Date]</h2>
+        <h1> Karthik & Roja Wedding</h1>
+        <h2>The Big Day - 08/24/24 </h2>
     </header>
     <main>
         <section>
