--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <section>
             <h2>We'd Love to Celebrate With You!</h2>
             <p>Please RSVP by [RSVP Date] to let us know if you can join us for our wedding celebration.</p>
-            <a href="#rsvp-form">RSVP Here</a>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSfxq5rAHYqBzcTMBkbwKYCqDZR6lnZ3xvvTvgYUda6q0Wf-Og/viewform?vc=0&c=0&w=1&flr=0">RSVP Here</a>
         </section>
         <section id="rsvp-form">
             <h2>RSVP Form</h2>
