--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     </main>
      <div class="slideshow-container">
         <div class="slide">
-            <img class="image" src="image1.jpg" alt="Image 1">
+            <img class="image" src="img1.JPG" alt="Image 1">
         </div>
         <div class="slide">
-            <img class="image" src="image2.jpg" alt="Image 2">
+            <img class="image" src="img2.JPG" alt="Image 2">
         </div>
         </div>
     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
