--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main>
         <section>
             <h2>We'd Love to Celebrate With You!</h2>
-            <p>Please RSVP by [RSVP Date] to let us know if you can join us for our wedding celebration.</p>
+            <p>Please RSVP by 07/07/24 to let us know if you can join us for our wedding celebration.</p>
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSfxq5rAHYqBzcTMBkbwKYCqDZR6lnZ3xvvTvgYUda6q0Wf-Og/viewform?vc=0&c=0&w=1&flr=0">RSVP Here</a>
         </section>
     </main>
