--- a/index.html
+++ b/index.html
@@ -7,10 +7,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1> Karthik & Roja Wedding</h1>
-        <h2>The Big Day - 08/24/24 </h2>
-    </header>
+	<header>
+    <h1> Karthik & Roja Wedding</h1>
+    <h2>The Big Day - 08/24/24 </h2>
+    <div id="navigation">
+    <a href="#reg">Register</a>
+    <a href="#about">About</a>
+    <a href="#teachers">Instructors</a>
+    <a href="#feedback">Testimonials</a>
+  </div>
+  <!-- end navigation bar -->
+</div>
+
+        </header>
     <main>
         <section>
             <h2>We'd Love to Celebrate With You!</h2>
