--- a/index.html
+++ b/index.html
@@ -10,14 +10,12 @@
 	<header>
     <h1> Karthik & Roja Wedding</h1>
     <h2>The Big Day - 08/24/24 </h2>
-    <div id="navigation">
+    <!--div id="navigation">
     <a href="#reg">Register</a>
     <a href="#about">About</a>
     <a href="#teachers">Instructors</a>
     <a href="#feedback">Testimonials</a>
-  </div>
-  <!-- end navigation bar -->
-</div>
+  </div--!>
 
         </header>
     <main>
