--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title> RSVP - Wedding</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+ 
+<script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY"></script>
+<body onload="initMap()">
 	<header>
     <h1> Karthik & Roja Wedding</h1>
     <h2>The Big Day - 08/24/24 </h2>
@@ -28,6 +30,10 @@
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSfxq5rAHYqBzcTMBkbwKYCqDZR6lnZ3xvvTvgYUda6q0Wf-Og/viewform?vc=0&c=0&w=1&flr=0">RSVP Here</a>
         </section>
     </main>
+
      <script src="script.js"></script>
+    
+     <div id="map"></div>
+    </div>
 </body>
 </html>
