--- a/index.html
+++ b/index.html
@@ -6,21 +6,14 @@
     <title> RSVP - Wedding</title>
     <link rel="stylesheet" href="style.css">
 </head>
- 
-<script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY"></script>
-<body onload="initMap()">
-	<header>
+
+<body>
+   <header>
     <h1> Karthik & Roja Wedding</h1>
     <h2>The Big Day - 08/24/24 </h2>
-    <!--div id="navigation">
-    <a href="#reg">Register</a>
-    <a href="#about">About</a>
-    <a href="#teachers">Instructors</a>
-    <a href="#feedback">Testimonials</a>
-  </div--!>
-
         </header>
-    <main>
+
+	<main>
         <section>
             <h2>We'd Love to Celebrate With You!</h2>
             <h3> Where: Raleigh, NC </h3>
@@ -32,8 +25,5 @@
     </main>
 
      <script src="script.js"></script>
-    
-     <div id="map"></div>
-    </div>
-</body>
+   </body>
 </html>
