--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> RSVP - Wedding</title>
-    <link rel="stylesheet" href="style.css">
+    <title> RSVP - KarthikRoja Wedding</title>
 </head>
 
-<body>
-   <header>
+<header>
     <h1> Karthik & Roja Wedding</h1>
     <h2>The Big Day - 08/24/24 </h2>
-        </header>
+</header>
+
+<body>
+	<img src="./images/img1.JPG" alt="test" width="42" height="42" style="vertical-align:bottom">
 
 	<main>
         <section>
