--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </header>
 
 <body>
-	<img src="./images/img1.JPG" alt="test" width="42" height="42" style="vertical-align:bottom">
+	<!--img src="./images/img1.JPG" alt="test" width="42" height="42" style="vertical-align:bottom"--!>
 
 	<main>
         <section>
