--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
+<style>
+body {
+  background-image: url('./images/img6.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100% 100%;
+}
+</style>
+
 <header>
     <h1> Karthik & Roja Wedding</h1>
     <h2>The Big Day - 08/24/24 </h2>
