--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@ body {
 }
 </style>
 
-<header>
-    <h1> Karthik & Roja Wedding</h1>
+<!--header>
+    <--h1> Karthik & Roja Wedding</h1>
     <h2>The Big Day - 08/24/24 </h2>
-</header>
+</header--!>
 
 <body>
 	<!--img src="./images/img1.JPG" alt="test" width="42" height="42" style="vertical-align:bottom"--!>
