--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <style>
 body {
-  background-image: url('./images/img6.JPG');
+  background-image: url('./images/img6.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: 100% 100%;
