--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> RSVP - KarthikRoja Wedding</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia&effect=neon|outline|emboss|shadow-multiple">
+
 </head>
 
 <style>
@@ -13,6 +15,9 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: 100% 100%;
+ font-family: "Sofia", sans-serif;
+  font-size: 30px;
+  text-shadow: 3px 3px 3px #ababab;
 }
 </style>
 
@@ -26,9 +31,9 @@ body {
 
 	<main>
         <section>
-            <h2>We'd Love to Celebrate With You!</h2>
-            <h3> Where: Raleigh, NC </h3>
-            <h3> When: 08/24/24 6pm </h3>
+            <h2 class="font-effect-outline">We'd Love to Celebrate With You!</h2>
+            <h3 class="font-effect-outline"> Where: Raleigh, NC </h3>
+            <h3 class="font-effect-outline"> When: 08/24/24 6pm </h3>
             
             <p>Please RSVP by 07/07/24 to let us know if you can join us for our wedding celebration.</p>
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSfxq5rAHYqBzcTMBkbwKYCqDZR6lnZ3xvvTvgYUda6q0Wf-Og/viewform?vc=0&c=0&w=1&flr=0">RSVP Here</a>
