--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@ body {
 
 	<main>
         <section>
-            <h2 class="font-effect-outline">We'd Love to Celebrate With You!</h2>
-            <h3 class="font-effect-outline"> Where: Raleigh, NC </h3>
-            <h3 class="font-effect-outline"> When: 08/24/24 6pm </h3>
+            <h2 class="font-effect-outline"> Karthik-Roja Wedding Alert!!!</h2>
+            <h4 class="font-effect-outline"> Where: Raleigh, NC </h3>
+            <h4 class="font-effect-outline"> When: 08/24/24 6pm </h3>
             
             <p>Please RSVP by 07/07/24 to let us know if you can join us for our wedding celebration.</p>
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSfxq5rAHYqBzcTMBkbwKYCqDZR6lnZ3xvvTvgYUda6q0Wf-Og/viewform?vc=0&c=0&w=1&flr=0">RSVP Here</a>
