--- a/index.html
+++ b/index.html
@@ -9,17 +9,7 @@
 
 </head>
 
-<style>
-body {
-  background-image: url('./images/img6.jpg');
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: 100% 100%;
- font-family: "Sofia", sans-serif;
-  font-size: 30px;
-  text-shadow: 3px 3px 3px #ababab;
-}
-</style>
+
 
 <!--header>
     <--h1> Karthik & Roja Wedding</h1>
@@ -32,8 +22,8 @@ body {
 	<main>
         <section>
             <h2 class="font-effect-outline"> Karthik-Roja Wedding Alert!!!</h2>
-            <h4 class="font-effect-outline"> Where: Raleigh, NC </h3>
-            <h4 class="font-effect-outline"> When: 08/24/24 6pm </h3>
+            <h4 class="font-effect-outline"> Where: Raleigh, North Carolina </h3>
+            <h4 class="font-effect-outline"> When: 08/24/24, 6pm </h3>
             
             <p>Please RSVP by 07/07/24 to let us know if you can join us for our wedding celebration.</p>
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSfxq5rAHYqBzcTMBkbwKYCqDZR6lnZ3xvvTvgYUda6q0Wf-Og/viewform?vc=0&c=0&w=1&flr=0">RSVP Here</a>
