--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> RSVP - KarthikRoja Wedding</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia&effect=neon|outline|emboss|shadow-multiple">
 
 </head>
@@ -17,8 +17,6 @@
 </header--!>
 
 <body>
-	<!--img src="./images/img1.JPG" alt="test" width="42" height="42" style="vertical-align:bottom"--!>
-
 	<main>
         <section>
             <h2 class="font-effect-outline"> Karthik-Roja Wedding Alert!!!</h2>
@@ -29,7 +27,6 @@
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSfxq5rAHYqBzcTMBkbwKYCqDZR6lnZ3xvvTvgYUda6q0Wf-Og/viewform?vc=0&c=0&w=1&flr=0">RSVP Here</a>
         </section>
     </main>
-
-     <script src="script.js"></script>
    </body>
+
 </html>
