--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
 </header--!>
 
 <body>
+     <div class="topnav">
+     <a class="active" href="#home">Home</a>
+     <a href="#news">News</a>
+     <a href="#contact">Contact</a>
+     <a href="#about">About</a>
+     </div>
 	<main>
         <section>
             <h2 class="font-effect-outline"> Karthik-Roja Wedding Alert!!!</h2>
