--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
  <main>
         <section>
-            <h2 class="font-effect-outline"> Karthik-Roja Wedding Alert!!!</h2>
+            <h2 class="font-effect-neon"> Karthik-Roja Wedding Alert!!!</h2>
             <h4 class="font-effect-outline"> Where: Raleigh, North Carolina </h3>
             <h4 class="font-effect-outline"> When: 08/24/24, 6pm </h3>
             
