--- a/index.html
+++ b/index.html
@@ -11,16 +11,15 @@
 
 
 
-<!--header>
-    <--h1> Karthik & Roja Wedding</h1>
-    <h2>The Big Day - 08/24/24 </h2>
-</header--!>
+<header>
+    <h2 class="font-effect-outline" align="center"> Karthik-Roja Wedding Alert!!!</h2>
+        
+</header>
 
 <body>
  <main>
          <section>
-            <h2 class="font-effect-outline" align="center"> Karthik-Roja Wedding Alert!!!</h2>
-            <h4 class="font-effect-outline"> Where: Raleigh, North Carolina </h3>
+           <h4 class="font-effect-outline"> Where: Raleigh, North Carolina </h3>
             <h4 class="font-effect-outline"> When: 08/24/24, 6pm </h3>
             
 	    <p class="font-effect-outline"> Please <a href="https://docs.google.com/forms/d/e/1FAIpQLSfxq5rAHYqBzcTMBkbwKYCqDZR6lnZ3xvvTvgYUda6q0Wf-Og/viewform?vc=0&c=0&w=1&flr=0" style="color:white">RSVP</a> by 07/07/24 to let us know if you can join! </p>
